deploy/apps/imdb/imdb-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb-api
  namespace: imdb
  labels:
    app.kubernetes.io/name: imdb-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imdb-api
  template:
    metadata:
      labels:
        app: imdb-api
    spec:
      containers:
        - name: app
          image: k3d-registry.localhost:5500/imdb-app:local
          imagePullPolicy: Always
          args:
          - --in-memory
          - --zone
          - dev
          - --region
          - dev

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          readinessProbe:
            initialDelaySeconds: 5
            failureThreshold: 60
            periodSeconds: 2
            httpGet:
              path: /readyz
              port: 8080

          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 8080

          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 64Mi

---

apiVersion: v1
kind: Service
metadata:
  name: imdb-api
  namespace: imdb
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: imdb-api
